--- a/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
+++ b/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\Sindentosa.ttf" />
+    <AndroidAsset Include="Assets\PlayfairDisplay-Regular.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
