add iOS implementation

--- a/TextBoxGenerationTool/TextBoxGenerationTool/TextBoxGenerationTool.csproj
+++ b/TextBoxGenerationTool/TextBoxGenerationTool/TextBoxGenerationTool.csproj
@@ -11,6 +11,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Fonts\PlayfairDisplay-Regular.ttf" />
+    <None Remove="Resources\Fonts\Sindentosa.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Fonts\PlayfairDisplay-Regular.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\Sindentosa.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
@@ -22,6 +32,10 @@
     <EmbeddedResource Update="Pages\TextBoxPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +45,11 @@
   <ItemGroup>
     <Compile Update="Pages\TextBoxPage.xaml.cs">
       <DependentUpon>TextBoxPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
