--- a/TextBoxGenerationTool/TextBoxGenerationTool.iOS/TextBoxGenerationTool.iOS.csproj
+++ b/TextBoxGenerationTool/TextBoxGenerationTool.iOS/TextBoxGenerationTool.iOS.csproj
@@ -63,6 +63,8 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderers\CustomEditorRenderer_iOS.cs" />
+    <Compile Include="CustomRenderers\CustomFrameRenderer_iOS.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
@@ -133,4 +135,5 @@
       <Name>TextBoxGenerationTool</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
 </Project>
