--- a/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
+++ b/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
@@ -33,6 +33,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,15 +62,13 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomRenderers\CustomEntryRenderer_Android.cs" />
-    <Compile Include="CustomRenderers\CustomLabelRenderer_Android.cs" />
+    <Compile Include="CustomRenderers\CustomEditorRenderer_Android.cs" />
+    <Compile Include="CustomRenderers\CustomFrameRenderer_Android.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\Sindentosa.ttf" />
-    <AndroidAsset Include="Assets\PlayfairDisplay-Regular.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
