--- a/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
+++ b/TextBoxGenerationTool/TextBoxGenerationTool.Android/TextBoxGenerationTool.Android.csproj
@@ -62,6 +62,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderers\AlphaSliderRenderer_Android.cs" />
+    <Compile Include="CustomRenderers\ColorSliderRenderer_Android.cs" />
     <Compile Include="CustomRenderers\CustomEditorRenderer_Android.cs" />
     <Compile Include="CustomRenderers\CustomFrameRenderer_Android.cs" />
     <Compile Include="MainActivity.cs" />
